:bug: Fix mobile spacing issue

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,6 +119,8 @@ button {
 }
 
 .links {
+  margin-bottom: 0.5em;
+
   li {
     display: inline-block;
   }
